Replace worker_jvm with worker/okhttp-worker library
Removes the runnable worker_jvm application (CLI, business handlers, Java 21 records/sealed interfaces) and replaces it with a Java 11 compatible worker/okhttp-worker library.

Key changes:
- New worker/okhttp-worker module: OkHttp-based Polling/WebSocket/Socket transports, clean WorkerEventHandler contract using Map<String,Object>, architecture boundary test
- worker_delivery_contract_jvm: downgraded to Java 11 bytecode, Jackson replaced with Gson, records/sealed interfaces replaced with plain classes, new Jsons facade for JDK-value JSON
- Server batch delivery controller now serializes WorkerCommandEnvelope to a plain WorkerCommandResponse DTO before sending
- Integration tests use a local observable handler instead of PhoneInspectHandler
- All docs and references updated from worker_jvm to worker/okhttp-worker